<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/tab_home_btn"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_sort"
        android:icon="@drawable/tab_classify_btn"
        android:title="@string/title_sort" />

    <item
        android:id="@+id/navigation_publish"
        android:icon="@drawable/tab_add_btn"
        android:title="@string/title_publish" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/tab_message_btn"
        android:title="@string/title_message" />

    <item
        android:id="@+id/navigation_my"
        android:icon="@drawable/tab_user_btn"
        android:title="@string/title_my" />

</menu>
